--- a/data-report-exporter/pom.xml
+++ b/data-report-exporter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>data-report</artifactId>
         <groupId>az.my.datareport</groupId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
