--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>az.my.datareport</groupId>
     <artifactId>data-report</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>2.0.0</version>
     <modules>
         <module>data-report-web</module>
         <module>data-report-core</module>
