--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,7 @@
                 <version>8.1.0</version>
                 <executions>
                     <execution>
+                        <phase>install</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
