--- a/data-report-core/pom.xml
+++ b/data-report-core/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <commons.io.version>2.11.0</commons.io.version>
+        <guava.version>31.1-jre</guava.version>
     </properties>
 
     <dependencies>
@@ -48,6 +49,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
