--- a/data-report-application/pom.xml
+++ b/data-report-application/pom.xml
@@ -8,13 +8,31 @@
         <version>2.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>data-report-application</artifactId>
     <packaging>jar</packaging>
 
-    <artifactId>data-report-application</artifactId>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>data-report-server</artifactId>
+            <artifactId>data-report-core</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>data-report-exporter</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>data-report-scraper</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>data-report-scanner</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
