--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,7 @@
                 <executions>
                     <execution>
                         <id>flatten</id>
-                        <phase>process-resources</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>flatten</goal>
                         </goals>
