--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
         <maven.exec.plugin.version>3.1.0</maven.exec.plugin.version>
         <maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
         <maven.jacoco.plugin.version>0.8.8</maven.jacoco.plugin.version>
+        <maven.release.plugin.version>3.0.0-M7</maven.release.plugin.version>
+        <maven.flatten.plugin.version>1.3.0</maven.flatten.plugin.version>
+        <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
+        <owasp.dependecy.plugin.version>8.1.0</owasp.dependecy.plugin.version>
+
 
         <configFilePath>${basedir}/src/main/resources/config.json</configFilePath>
     </properties>
@@ -170,7 +175,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
-                <version>1.3.0</version>
+                <version>${maven.flatten.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>flatten</id>
@@ -212,13 +217,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <version>${maven.release.plugin.version}</version>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>${maven.clean.plugin.version}</version>
                 <configuration>
                     <filesets>
                         <fileset>
@@ -265,7 +270,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
+                <version>${maven.jacoco.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
@@ -282,11 +287,10 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>8.1.0</version>
+                <version>${owasp.dependecy.plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>install</phase>
