--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>az.my.datareport</groupId>
     <artifactId>data-report</artifactId>
     <packaging>pom</packaging>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
     <modules>
         <module>data-report-web</module>
         <module>data-report-core</module>
@@ -82,6 +81,7 @@
         <connection>scm:git:ssh://git@github.com/mammadyahyayev/data-report.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/mammadyahyayev/data-report.git</developerConnection>
         <url>https://github.com/mammadyahyayev/data-report</url>
+        <tag>v2.1.0</tag>
     </scm>
 
     <dependencyManagement>
