--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>az.my.datareport</groupId>
     <artifactId>data-report</artifactId>
     <packaging>pom</packaging>
-    <version>2.1.0</version>
+    <version>3.0.0-SNAPSHOT</version>
     <modules>
         <module>data-report-web</module>
         <module>data-report-core</module>
