--- a/data-report-dashboard/package.json
+++ b/data-report-dashboard/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "5.3.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "5.3.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
