--- a/data-report-dashboard/package.json
+++ b/data-report-dashboard/package.json
@@ -8,7 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@types/react-router-dom": "5.3.3",
+    "framer-motion": "^10.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.3.0"
