--- a/data-report-dashboard/package.json
+++ b/data-report-dashboard/package.json
@@ -8,11 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.1",
-    "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@types/react-router-dom": "5.3.3",
-    "framer-motion": "^10.3.2",
+    "framer-motion": "^10.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.43.5",
@@ -22,6 +20,9 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
