--- a/data-report-dashboard/package.json
+++ b/data-report-dashboard/package.json
@@ -11,21 +11,23 @@
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
-    "@types/react-router-dom": "5.3.3",
     "framer-motion": "^10.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.43.5",
-    "react-router-dom": "5.3.0"
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^17.0.56",
+    "@types/react-dom": "^17.0.19",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
-    "typescript": "^4.5.4",
+    "typescript": "^4.9.5",
     "vite": "^2.8.0"
   }
 }
