--- a/data-report-shared-resources/src/main/resources/pagination-config.json
+++ b/data-report-shared-resources/src/main/resources/pagination-config.json
@@ -1,38 +1,45 @@
 {
-  "file_name": "turbo.az",
-  "file_type": "EXCEL",
-  "file_extension": "xlsx",
+  "fileName": "Github Search",
+  "fileType": "EXCEL",
+  "fileExtension": "xlsx",
   "description": "Dummy Description",
-  "data_parts": [
+  "pageParameters": {
+    "url": "https://github.com/search",
+    "minPage": 0,
+    "maxPage": 20,
+    "delayBetweenPages": 10000,
+    "queryParams": [
+      {
+        "key": "q",
+        "value": "java",
+        "isPageParam": false
+      },
+      {
+        "key": "type",
+        "value": "Repository",
+        "isPageParam": false
+      },
+      {
+        "key": "p",
+        "value": 0,
+        "isPageParam": true
+      }
+    ]
+  },
+  "dataParts": [
     {
-      "urls": [
-        "https://turbo.az/autos?page=1",
-        "https://turbo.az/autos?page=2",
-        "https://turbo.az/autos?page=3",
-        "https://turbo.az/autos?page=4",
-        "https://turbo.az/autos?page=5",
-        "https://turbo.az/autos?page=6",
-        "https://turbo.az/autos?page=7",
-        "https://turbo.az/autos?page=8",
-        "https://turbo.az/autos?page=9",
-        "https://turbo.az/autos?page=10"
-      ],
       "elements": [
         {
-          "name": "parent",
-          "selector": ".products-i__bottom",
-          "sub_elements": [
+          "name": "repository",
+          "selector": ".repo-list-item",
+          "subElements": [
             {
-              "name": "car",
-              "selector": ".products-i__name"
+              "name": "title",
+              "selector": ".v-align-middle"
             },
             {
-              "name": "price",
-              "selector": ".product-price"
-            },
-            {
-              "name": "info",
-              "selector": ".products-i__attributes"
+              "name": "description",
+              "selector": ".mb-1"
             }
           ]
         }
